[tool.poetry]
name = "cdot-wzdx-translator"
version = "1.4.4-rc1"
description = "CDOT Work Zone WZDx Translators"
authors = ["CDOT <CDOT_rtdh_prod@state.co.us>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "wzdx" }
]

[tool.poetry.dependencies]
python = "^3.12"
xmltodict = "^1.0.2"
jsonschema = "^4.25.1"
python-dateutil = "^2.9.0"
shapely = "^2.1.2"
geopy = "^2.4.1"
numpy = "^2.3.4"
requests = "^2.32.5"
pytz = "^2025.2"
regex = "^2025.11.3"
pyproj = "^3.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
time-machine = "^2.19.0"
poetry-plugin-export = "^1.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"