[metadata]
name = wzdx-translator-jacob6838
version = 0.0.4
author = Jacob Frye
author_email = jfrye@neaeraconsulting.com
description = CDOT Work Zone WZDx Translators
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/wzdx-translator
project_urls =
    Bug Tracker = https://github.com/pypa/wzdx-translator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = wzdx-translator
packages = find:
python_requires = >=3.6

[options.packages.find]
where = wzdx-translator